--- a/config/services.config.php.example
+++ b/config/services.config.php.example
@@ -2,7 +2,8 @@
 $services = array(
     'localhost' => array(
         "service_humanname" => "Service Local",
-        "cas_service" => "http://localhost/cas/login?service=%service%",
+        "cas_login" => "http://localhost/cas/login?service=%service%",
+        "cas_logout" => "http://localhost/cas/logout?service=%service%",
         "cas_validator" => "http://localhost/cas/serviceValidate?service=%service%&ticket=%ticket%",
         "api_url" => "https://localhost/viticonnect/api/%login%/%epoch%/%md5%",
         "api_secret" => "SECRET"
