Autorisation de renvoie des champs extra à des noms de domaines en particulier

--- a/config/apisecrets.config.php.example
+++ b/config/apisecrets.config.php.example
@@ -4,5 +4,4 @@
 // $services["odgrhone"]["api_secret"] = "******************";
 // $services["igpvaucluse"]["api_secret"] = "******************";
 // $services["odgprovence"]["api_secret"] = "******************";
-
-
+// $services["odgprovence"]["api_extra"] = ["domain.domain"];
